# keep_github_workflows_active

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  concept.md  pyproject.toml  requirements.txt  reset_git_history.sh
.github/workflows/: activate_workflows.yml  activate_workflows_priv.yml  ci.yml
docs/systemdesign/: SECURITY.md
keep_github_workflows_active/: keep_github_workflows_active.py
notebooks/: Quickstart.ipynb
src/keep_github_workflows_active/: __init__conf__.py  __main__.py  cli.py  keep_active.py  keep_github_workflow_active.py  sanitization.py  typed_click.py
tests/: conftest.py  test_cli.py  test_github_integration.py  test_metadata.py  test_module_entry.py  test_sanitization.py
