[project]
name = "keep_github_workflows_active"
version = "2.3.3"
description = "Template for python apps with registered cli commands"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["rich-click>=1.9.8", "lib_cli_exit_tools>=2.3.3", "requests>=2.34.2", "pydantic>=2.13.4"]
license = { text = "MIT" }
authors = [{ name = "bitranox", email = "bitranox@gmail.com" }]
keywords = ["logging", "rich", "cli", "terminal", "ansi"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Typing :: Typed",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
]

# System packages required for CI runners (read by GitHub Actions workflow template)
# Format: "apt_package_name" for Ubuntu, future: {"apt": "...", "brew": "...", "choco": "..."}
[tool.ci]
system-dependencies-ubuntu = []
system-dependencies-macos = []
system-dependencies-windows-pip = []
system-dependencies-windows-choco = []
os = ["ubuntu-latest", "windows-latest", "macos-latest"]

[project.urls]
Homepage = "https://github.com/bitranox/keep_github_workflows_active"
Repository = "https://github.com/bitranox/keep_github_workflows_active.git"
Issues = "https://github.com/bitranox/keep_github_workflows_active/issues"

[project.optional-dependencies]
dev = [
  "pytest>=9.1.1",
  "pytest-cov>=7.1.0",
  "ruff>=0.16.0",
  "pyright[nodejs]>=1.1.411",
  "bandit>=1.9.4",
  # 1.5.1 was yanked upstream (unintended breaking changes), so 1.5.0 is the newest usable
  # release; a >=1.5.1 floor has ZERO candidates and makes this extra unresolvable.
  "build>=1.5.0",
  "twine>=6.2.0",
  # codecov-cli is disabled, not dropped: it requires click<8.3.0, which drags click back to
  # 8.2.1 - the version with CVE-2026-7246 (command injection in click.edit(), fixed in 8.3.3).
  # Nothing else here caps click, so with this line active the audit gate goes red on every
  # clean install. Leaving it off costs nothing: CI uploads coverage via codecov/codecov-action,
  # not this CLI, and "bmk codecov" resolves codecovcli from PATH and only warns when absent.
  # Re-enable once codecov-cli relaxes its click<8.3.0 pin.
  # "codecov-cli>=11.2.8",
  # Transitive CVE pins
  "click>=8.4.2",                # CVE-2026-7246
  "pip-audit>=2.10.1",
  "textual>=8.2.8",
  "import-linter>=2.13",
  "rtoml>=0.13.0"
]

[project.scripts]
keep_github_workflows_active = "keep_github_workflows_active.cli:main"
keep-github-workflows-active = "keep_github_workflows_active.cli:main"

[build-system]
requires = ["hatchling>=1.31.0"]
build-backend = "hatchling.build"



[tool.hatch.build.targets.wheel]
packages = ["src/keep_github_workflows_active"]
include = ["src/keep_github_workflows_active/py.typed"]

[tool.ruff]
line-length = 160
target-version = "py313"

[tool.ruff.lint]
select = [
  "E", "W",     # pycodestyle
  "F",           # pyflakes
  "I",           # isort
  "N",           # pep8-naming
  "UP",          # pyupgrade
  "B",           # bugbear
  "A",           # builtins shadowing
  "C4",          # comprehension simplification
  "SIM",         # simplification
  "TCH",         # type-checking imports
  "RUF",         # ruff-specific
  "G",           # logging format (catches f-string in logger)
  "T20",         # print statements
  "PTH",         # pathlib preference
  "PLC", "PLE",  # pylint conventions/errors
  "S",           # flake8-bandit security checks
  "PERF",        # performance anti-patterns
  "ERA",         # eradicate dead/commented-out code
  "FBT",         # boolean trap (boolean positional args)
  "PLR",         # pylint refactor
  "PLW",         # pylint warnings
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-type-checking]
# The pydantic models in keep_github_workflow_active.py (GitHubRepository,
# GitHubWorkflow, EnvConfig, etc.) resolve their field annotations at
# model-build time, so their field-type imports must stay at runtime even
# though the file uses ``from __future__ import annotations``. Telling ruff
# about the Pydantic base keeps TC001/TC002/TC003 from moving those imports
# into a TYPE_CHECKING block and breaking model construction.
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.per-file-ignores]
# ignore the "unused import sys" in the jupyter notebook - which we need (it is a linter hickup)
"notebooks/*.ipynb" = ["F401"]
# Tests: assert is standard, test fixtures have passwords, magic values are clearer inline, temp paths are fine.
# PLC0415: local/deferred imports are a deliberate test idiom - several tests import inside the test
# body to exercise import-time and cache behaviour, so moving them to module top would defeat intent.
"tests/*.py" = ["T20", "S101", "S105", "S106", "S108", "FBT001", "FBT003", "PLR0913", "PLR2004", "PLC0415"]

[tool.pyright]
typeCheckingMode = "strict"
extraPaths = [
  "src",
]
exclude = [
  # Restore pyright's built-in default excludes (setting `exclude` overrides them).
  # `**/.*` keeps pyright out of dot-dirs such as a local `.venv`, `.git`, and tool caches.
  "**/node_modules",
  "**/__pycache__",
  "**/.*",
  "scripts/menu.py",
]

[tool.pytest.ini_options]
addopts = ["--doctest-modules", "--ignore=src/keep_github_workflows_active/keep_github_workflow_active.py"]
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE"]
pythonpath = ["src"]
markers = [
  "os_agnostic: test runs on every supported operating system",
  "os_windows: test exercises Windows-only behavior",
  "os_macos: test exercises macOS-only behavior",
  "os_posix: test exercises behavior requiring POSIX semantics",
  "os_linux: test exercises Linux-only behavior",
  "local_only: test requires local credentials or resources unavailable in CI",
  "integration: test exercises external systems (e.g. live GitHub API)",
]

[tool.coverage.run]
branch = true
parallel = false
data_file = ".coverage.unit"
source = ["src/keep_github_workflows_active"]

[tool.coverage.report]
omit = [
  "tests/*",
]
fail_under = 50
show_missing = true

[tool.clean]
# Patterns to remove when running `make clean`
patterns = [
  "**/__pycache__",
  ".hypothesis",
  ".import_linter_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".pyright",
  ".mypy_cache",
  ".tox",
  ".nox",
  ".eggs",
  "*.egg-info",
  "build",
  "dist",
  "htmlcov",
  ".coverage",
  "coverage.xml",
  "codecov.sh",
  ".cache",
  "result",
]

[tool.git]
# Default git remote for push/release commands
default-remote = "origin"


[tool.scripts.test]
# Configuration for scripts/test.py test runner
pytest-verbosity = "-vv"
coverage-report-file = "coverage.xml"
src-path = "src"
[tool.importlinter]
root_package = "keep_github_workflows_active"

[[tool.importlinter.contracts]]
name = "CLI depends on behaviors only"
type = "layers"
layers = [
  "keep_github_workflows_active.cli",
  "keep_github_workflows_active.behaviors",
]

[tool.pip-audit]
# Known vulnerabilities to ignore (unfixable or accepted risk)
# CVE-2026-3219: pip 26.0.1 concatenated tar+ZIP confusion, no fix released yet (CI runner ships 26.0.1)
# CVE-2026-6357: pip 26.0.1 self-update wheel-import ordering, fix in 26.1 (CI runner ships 26.0.1)
# PYSEC-2022-42969: py 1.11.0 ReDoS via crafted SVN info, no fix available
# CVE-2026-44405: paramiko 4.0.0 rsakey.py allows SHA-1 (local bmk toolchain dep, no fix released yet)
# CVE-2026-44431/CVE-2026-44432: urllib3 2.6.3 (local bmk toolchain dep, fix in 2.7.0)
ignore-vulns = ["CVE-2026-3219", "CVE-2026-6357", "PYSEC-2022-42969", "CVE-2026-44405", "CVE-2026-44431", "CVE-2026-44432"]
